--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </main>
     <footer>
-      <p class="copyright">© 2025 MySute. All rights reserved.</p>
+      <p class="copyright">© 2025 MySite. All rights reserved.</p>
     </footer>
   </body>
 </html>
